src/App.module.css
/* ----------------------
        Mobile layout
   ---------------------- */
.mobileLayout {
  height: 100vh;
  overflow: hidden;
}

.mobileLayout .topbar {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background-color: var(--menu-bg);
}

.mobileLayout .topbar .burgerButton {
  position: absolute;
  height: 1rem;
  top: 1.125rem;
  right: 0.75rem;
  cursor: pointer;
}

.mobileLayout .outlet {
  height: 100%;
  overflow-y: auto;
  margin-top: 3.25rem;
}

.mobileLayout .outlet .bottomSpacing {
  height: 3.25rem;
}

/* ----------------------
        Tablet layout
   ---------------------- */
.tabletLayout {
  display: flex;
  height: 100vh;
}

.tabletLayout .sidebar {
  flex: 0 0 16.5rem; /* 16.5rem width, don't grow or shrink */
  overflow: auto;
  height: 100%;
  background-color: var(--menu-bg);
}

.tabletLayout .outlet {
  overflow: auto;
  height: 100%;
}

/* ----------------------
        Desktop layout
   ---------------------- */
.desktopLayout {
  display: flex;
  max-width: 160rem;
  height: 100vh;
}

.desktopLayout .sidebar {
  flex: 0 0 16.5rem; /* 16.5rem width, don't grow or shrink */
  overflow: auto;
  height: 100%;
  background-color: var(--menu-bg);
}

.desktopLayout .outlet {
  flex: 0 0 30%; /* 30% width */
  overflow: auto;
  height: 100%;
}

.desktopLayout > div:nth-child(3) {
  overflow: auto;
  height: 100%;
}

